backend/src/main/java/com/example/shop/common/error/ResourceNotFoundException.java
package com.example.shop.common.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
